2013-06-13 Stefan Bidigaray <stefanbidi@gmail.com>

	* configure.ac: Check for existance of ICU headers.
	* Source/CFString.c: Only build ICU support if headers are installed.
	* Source/CFStringEncoding.c: Incorporate nonlossy ASCII conversion
	function.  Check ICU headers.
	* Source/CFRuntime.c: Only check for small objects if they are
	supported.
	* Source/NSCFTimeZone.m,
	* Tests/CFLocale/bridge.m,
	* Tests/CFDictionary/bridge.m,
	* Tests/CFArray/bridge.m: Include Foundation/NSString.h.

2013-06-08 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFRuntime.c: fix a TFB crash with small objects
	* Source/GNUmakefile.in,
	* Tests/GNUmakefile.super: remove a macro that causes all OS X Base
	methods to be unavailable
	* Source/CFTimeZone.c,
	* Source/NSCFTimeZone.m,
	* Tests/CFTimeZone/bridge.m: TFB support for CFTimeZone

2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFArray/bridge.m,
	* Source/NSCFArray.m,
	* Source/CFArray.c: TFB for CFArray and other fixes

2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Tests/CFDictionary/bridge.m,
	* Source/CFDictionary.c,
	* Source/NSCFDictionary.m: TFB for CFDictionary
	* Source/NSCFData.m: fixing the _cfGetTypeID call
	* Source/NSCFError.m: fixing the _cfGetTypeID call


2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Source/NSCFType.m: leave hash calculation to NS classes,
	so that they match when compaing NS and CF objects
	* Tests/CFLocale/bridge.m
	* Source/NSCFLocale.m,
	* Source/CFLocale.c: TFB for CFLocale

2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Source/NSCFString.m,
	* Tests/CFString/objc_bridge.m,
	* Tests/CFString/objc_bridge_from_cf.m,
	* Source/CFString.c: Improved TFB for CFString

2013-06-06 Lubos Dolezel <lubos@dolezel.info>

	* Source/CFSet.c,
	* Source/NSCFSet.m,
	* Tests/CFSet/objc_bridge.m: Add CFSet bridging support
	* Source/GSPrivate.h: Add variable argument helper macros

2013-03-16 Fred Kiefer <fredkiefer@gmx.de>

	* Source/CFPropertyList.c,
	* Source/CFString.c,